--- a/application.yml
+++ b/application.yml
@@ -34,34 +34,34 @@ applications:
 spring: 
   profiles: Servers
 servers:
-  total: 25
-  names:
-    - STG-ADMAPing
-      - ADMA-Ping
-    - STG-CaptainAssignerService
-    - STG-CaptainDisputeServiceWeb
-    - STG-CaptainDisputeServiceWorker
-    - STG-CaptainCommentsWorker
-    - STG-CoreApp
-    - STG-WebApp
-    - STG-WebPublic
-    - STG-SupplyService
-    - STG-LoyaltyService
-    - STG-DispatchHandlerService
-    - STG-GeoSpatialService
-    - STG-ConsumerEdgeService
-    - STG-EventProcessor
-    - STG-Fawry
-    - STG-LocationsService
-    - STG-LocationsPOIService
-    - STG-AuthenticationService
-    - STG-PromotionsService
-    - STG-Solutions
-    - STG-TripReportWeb
-    - STG-TripReportWorker
-    - STG-RecentLocation
-    - STG-PingService
-    - STG-PushyService
+  Staging:
+    total: 25
+    names:
+      - STG-ADMAPing
+      - STG-CaptainAssignerService
+      - STG-CaptainDisputeServiceWeb
+      - STG-CaptainDisputeServiceWorker
+      - STG-CaptainCommentsWorker
+      - STG-CoreApp
+      - STG-WebApp
+      - STG-WebPublic
+      - STG-SupplyService
+      - STG-LoyaltyService
+      - STG-DispatchHandlerService
+      - STG-GeoSpatialService
+      - STG-ConsumerEdgeService
+      - STG-EventProcessor
+      - STG-Fawry
+      - STG-LocationsService
+      - STG-LocationsPOIService
+      - STG-AuthenticationService
+      - STG-PromotionsService
+      - STG-Solutions
+      - STG-TripReportWeb
+      - STG-TripReportWorker
+      - STG-RecentLocation
+      - STG-PingService
+      - STG-PushyService
 ---
 spring: 
   profiles: Relations
