--- a/Careem-Prod-FrontEnd.yml
+++ b/Careem-Prod-FrontEnd.yml
@@ -26,7 +26,7 @@ Staging:
 spring:
   profiles: versions
 Staging:
-  STGWebPublicVersion:
+  STGWebAppVersion:
     properties:
       Description: AWS ElasticBeanstalk Staging STG-WebApp Version
       SourceBundle: 
