--- a/application.yml
+++ b/application.yml
@@ -2,30 +2,24 @@ configuration:
   projectName: master-service
 server:  
   port: 8000
-access:
-  aws:
-    key: 123
-    secret: 123
----
-spring:
-  profiles: configurationTemplate
 ---
 spring:
   profiles: Apps
 applications:
-  total: 15
+  total: 16
   names:
     - ADMA-Ping
-    - CaptainAssginer
+    - CaptainAssigner
     - CaptainDisputeService
     - Careem-Prod-BackEnd
     - Careem-Prod-FrontEnd
     - DispatchHandler
-    - Edge-Services
+    - Edge Services
     - EventProcessor
     - Fawry
     - Locations
     - Microservices
+    - Microservices-Docker
     - Promotions
     - Solutions
     - TripReport
@@ -34,105 +28,24 @@ applications:
 spring: 
   profiles: Servers
 servers:
-  Staging:
-    total: 25
+  prod:
+    total: 18
     names:
-      - STG-ADMAPing
-      - STG-CaptainAssignerService
-      - STG-CaptainDisputeServiceWeb
-      - STG-CaptainDisputeServiceWorker
-      - STG-CaptainCommentsWorker
-      - STG-CoreApp
-      - STG-WebApp
-      - STG-WebPublic
-      - STG-SupplyService
-      - STG-LoyaltyService
-      - STG-DispatchHandlerService
-      - STG-GeoSpatialService
-      - STG-ConsumerEdgeService
-      - STG-EventProcessor
-      - STG-Fawry
-      - STG-LocationsService
-      - STG-LocationsPOIService
-      - STG-AuthenticationService
-      - STG-PromotionsService
-      - STG-Solutions
-      - STG-TripReportWeb
-      - STG-TripReportWorker
-      - STG-RecentLocation
-      - STG-PingService
-      - STG-PushyService
----
-spring: 
-  profiles: Relations
-apps:
-  ADMA-Ping:
-    total: 1
-    servers:
-      - STG-ADMAPing
-  CaptainAssginer:
-    total: 1
-    servers:
-      - STG-CaptainAssignerService
-  CaptainDisputeService:
-    total: 3
-    servers:
-      - STG-CaptainDisputeServiceWeb
-      - STG-CaptainDisputeServiceWorker
-      - STG-CaptainCommentsWorker
-  Careem-Prod-BackEnd:
-    total: 1
-    servers:
-      - STG-CoreApp
-  Careem-Prod-FrontEnd:
-    total: 2
-    servers:
-      - STG-WebApp
-      - STG-WebPublic
-  DispatchHandler:
-    total: 4
-    servers:
-      - STG-SupplyService
-      - STG-LoyaltyService
-      - STG-DispatchHandlerService
-      - STG-GeoSpatialService
-  Edge Services:
-    total: 1
-    servers:
-      - STG-ConsumerEdgeService
-  EventProcessor:
-    total: 1
-    servers:
-      - STG-EventProcessor
-  Fawry:
-    total: 1
-    servers:
-      - STG-Fawry
-  Locations:
-    total: 2
-    servers:
-      - STG-LocationsService
-      - STG-LocationsPOIService
-  Microservices:
-    total: 1
-    servers:
-      - STG-AuthenticationService
-  Promotions:
-    total: 1
-    servers:
-      - STG-PromotionsService
-  Solutions:
-    total: 1
-    servers:
-      - STG-Solutions
-  TripReport:
-    total: 2
-    servers:
-      - STG-TripReportWeb
-      - STG-TripReportWorker
-  Workers:
-    total: 3
-    servers:
-      - STG-RecentLocation
-      - STG-PingService
-      - STG-PushyService
+      - Prod-Authentication-Service
+      - Prod-Core-Service-ADMA
+      - Prod-Core-Service-App
+      - Prod-Core-Service-OPS
+      - Prod-Core-Service-Scripts
+      - Prod-Docker-Captain-Expedition
+      - Prod-Eta-Service
+      - Prod-Trip-Report-Service
+      - Prod-Worker-Captain-Ping-Director
+      - Prod-Worker-Captain-Realtime-Pings
+      - Prod-Worker-Colleague-Zendesk
+      - Prod-Worker-Communication-DeadLetters
+      - Prod-Quality-Control-Service
+      - Prod-Consumer-Api-Gateway
+      - Prod-Supply-Service
+      - Prod-Captain-utility-edge-service
+      - Prod-Captain-Api-Gateway
+      - Prod-Solutions
